[package]
name = "html-index"
version = "0.3.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-net-web/html-index"
documentation = "https://docs.rs/html-index"
description = "Generate an HTML index."
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"
edition = "2018"

[dependencies]
css-rel-preload = "0.1.0"
http-types = "2.1.0"

[dev-dependencies]
